                - using "LOG_PATH" for "exception.txt"
            - changed message dialog on "checkbox_alibicheck"
            - added "checkbox_checkspaces"
            - added statusbar msgs for controls on tab 3
            - check if all rules have set a category before save
            - refresh rulename in treebook view if rulename was changed  / bug found by jrock
            - increase height of wxStaticBox
        - tab 4:
            - add "Cancel" button to add rule message dialog
            - disable "OK" button till rulename was entered
            - prevents a rule without a name
            - changes in del_rule() function
                - small fix
                - and from now on: the last rule can not be deleted (with info dialog)
            - added statusbar msgs for controls on tab 4
            - increase width of listbox
        - tab 5:
            - add "Cancel" button to add categories message dialog
            - disable "OK" button till categoryname was entered
            - prevents a category without a name
            - changes in import_categories_tbl() function
            - changes in add_category() function
            - added statusbar msgs for controls on tab 5
            - increase width of listbox
        - tab 6:
            - added statusbar msgs for controls on tab 6

    - update: "core/log.lua"  / by pulsar
        - added check_filesize() function to clear logfile if it reaches the max allowable size (2MB)  / requested by Devious
        - caching logfilesize from cfg/cfg.tbl

    - update: "Announcer.wx.lua"  / by jrock
        - tab 3:
            - changed "textctrl_category" input field into a "choicectrl_category" selection
            - changed "choicectrl_category" to sort categories by name
            - fixed "textctrl_command" and "textctrl_alibinick" to avoid whitespaces in fields after restart
            - added "textctrl_checkage" to enable/disable "spinctrl_maxage"